Cleaned up files

--- a/notebooks/02_python-syntax.ipynb
+++ b/notebooks/02_python-syntax.ipynb
@@ -69,48 +69,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "1 + 1 + 2 + 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Everything after the # is ignored\n",
     "1 #  + 1 + 2 +3"
@@ -220,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -228,10 +206,10 @@
    },
    "outputs": [],
    "source": [
-    "age = 48\n",
-    "first_name = \"Andrew\"\n",
-    "last_name = \"Meade\"\n",
-    "shoe_size = 10"
+    "age = ____\n",
+    "first_name = ____\n",
+    "last_name = ____\n",
+    "shoe_size = ____"
    ]
   },
   {
@@ -307,26 +285,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "first_name[0]"
+    "first_name[]"
    ]
   },
   {
@@ -385,26 +352,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(first_name)"
+    "len()"
    ]
   },
   {
@@ -446,21 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Andrew Meade is 48 years old.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"{first_name} {last_name} is {age} years old.\")"
    ]
@@ -550,24 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48\n",
-      "4.8\n",
-      "14.8\n",
-      "Andrew\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_calculation_output = age\n",
     "print(my_calculation_output)\n",
