--- a/notebooks/03_data-types.ipynb
+++ b/notebooks/03_data-types.ipynb
@@ -74,24 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'str'>\n",
-      "<class 'float'>\n",
-      "<class 'int'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(42))\n",
     "\n",
@@ -158,20 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33.2"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "23.2 + 10"
    ]
@@ -206,27 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.540000000000003\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_cost = 141.24\n",
     "\n",
     "number_of_people = 6\n",
     "\n",
-    "cost_per_person = total_cost / number_of_people\n",
+    "cost_per_person = ____\n",
     "\n",
     "print(cost_per_person)"
    ]
@@ -309,26 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Andrew Meade is 49 years old.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "age = 49\n",
-    "first_name = \"Andrew\"\n",
-    "last_name = \"Meade\"\n",
-    "shoe_size = 10\n",
+    "age = ____\n",
+    "first_name = ____\n",
+    "last_name = ____\n",
+    "shoe_size = ____\n",
     "print(f\"{first_name} {last_name} is {age} years old.\")"
    ]
   },
@@ -362,23 +324,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Andrew Meade is 48.093290324 years old.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "age =  48.093290324\n",
+    "age =  \n",
     "\n",
     "print(f\"{first_name} {last_name} is {age} years old.\")"
    ]
@@ -421,21 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Andrew Meade is 48.1 years old.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"{first_name} {last_name} is {age:.1f} years old.\")"
    ]
@@ -468,23 +414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My height is precisely 4848 cm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "height = 4848  # cm\n",
+    "height = ____  # cm\n",
     "print(f\"My height is precisely {height} cm\")"
    ]
   },
@@ -571,13 +509,6 @@
     "\n",
     "Please talk to us on the zoom call if you have any questions, comments or bugs."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
