--- a/notebooks/04_functions-and-help.ipynb
+++ b/notebooks/04_functions-and-help.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -425,25 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "type str doesn't define __round__ method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m my_useful_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is an example string.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mround\u001b[39m(my_useful_string)\n",
-      "\u001b[1;31mTypeError\u001b[0m: type str doesn't define __round__ method"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_useful_string = \"This is an example string.\"\n",
     "\n",
@@ -502,22 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 1) (280861756.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[26], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    my_useful_string = = 'This is an example string.\u001b[0m\n\u001b[1;37m                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_useful_string = = 'This is an example string.\n",
     "\n",
@@ -550,25 +529,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'my_string' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m my_useful_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is an example string.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_string)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'my_string' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_useful_string = \"This is an example string.\"\n",
     "\n",
@@ -607,9 +574,7 @@
    "source": [
     "## Any Bugs/Issues/Comments?\n",
     "\n",
-    "If you've found a bug or have any comments about this notebook, please fill out this on-line form: https://forms.gle/tp2veeF8e7fbQMvY6.\n",
-    "\n",
-    "Any feedback we get we will try to correct/implement as soon as possible."
+    "Please talk to us on the zoom call if you have any questions, comments or bugs."
    ]
   }
  ],
