--- a/notebooks/08_python-functions.ipynb
+++ b/notebooks/08_python-functions.ipynb
@@ -2,7 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining Custom Python Functions\n",
+    "\n",
+    "*Dr Andrew Meade and Dr Jo Baker *\n",
+    "\n",
+    "Material modified from the original course by\n",
+    "\n",
+    "*Dr Chas Nelson and Mikolaj Kundegorski*\n",
+    "\n",
+    "*Part of https://github.com/ChasNelson1990/python-zero-to-hero-beginners-course*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -361,13 +377,6 @@
     "\n",
     "Please talk to us on the zoom call if you have any questions, comments or bugs. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
