--- a/notebooks/11_pandas.ipynb
+++ b/notebooks/11_pandas.ipynb
@@ -177,7 +177,7 @@
     "display(iris.loc[1:2, \"petal_length\"])\n",
     "\n",
     "# Access the first ten rows, last three columns\n",
-    "display(iris.loc[0:9, \"petal_width\":\"species\"])"
+    "display(iris.loc[0:9, \"sepal_width\":\"species\"])"
    ]
   },
   {
