--- a/notebooks/04_functions-and-help.ipynb
+++ b/notebooks/04_functions-and-help.ipynb
@@ -55,7 +55,7 @@
     "* `type()` takes some input data and returns that data's type\n",
     "* `print()` takes some input data (a string) and prints it to your notebook (we will discuss what `print()` returns below)\n",
     "\n",
-    "Python has many, many built-in functions and, through packages, other functions.\n",
+    "Python has many, many, built-in functions and, through packages, other functions.\n",
     "\n",
     "All Python functions have several features in common:\n",
     "* They take zero or more parameters or arguments (inputs)\n",
@@ -81,7 +81,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 4.1:</strong> In the code cell below this cell, create a new variable with pi rounded to zero decimal places. Print this variable and it's type.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 4.1:</strong> In the code cell below this cell, create a new variable with pi rounded to zero decimal places. Print this variable and its type.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/uCWjUQTt1qI'>here</a> for a walkthrough.\n",
     "</div>"
@@ -235,7 +235,7 @@
     "\n",
     "`None` is a special Python value.\n",
     "\n",
-    "Sometimes we have a piece of information, returned from a function for example, that has no value, i.e. it's empty. Amongst other issues, leaving this piece of information blank would cause problems for a human trying to see what's going on in their code. So Python puts this special `None` value there."
+    "Sometimes we have a piece of information, returned from a function for example, that has no value, i.e., it's empty. Amongst other issues, leaving this piece of information blank would cause problems for a human trying to see what's going on in their code. So Python puts this special `None` value there."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "## Function Documentation\n",
     "\n",
-    "When any programmer encounters new functions, uncommon functions or functions they've just forgotten how to use they need help. This is the purpose of documentation.\n",
+    "When any programmer encounters new functions, uncommon functions or functions they've just forgotten how to use, they need help. This is the purpose of documentation.\n",
     "\n",
     "### `help()`\n",
     "\n",
@@ -396,7 +396,7 @@
     "\n",
     "But, in reality, a good error message can be a really helpful tool. An error message can help you identify a mistake you've made, or a mistake that you might not notice until it's too late.\n",
     "\n",
-    "One things for sure, an error message is more helpful than when the code runs (without errors) but returns an unexpected value."
+    "One thing is for sure: An error message is more helpful than when the code runs (without errors) but returns an unexpected value."
    ]
   },
   {
@@ -595,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
