--- a/notebooks/09_python_modules.ipynb
+++ b/notebooks/09_python_modules.ipynb
@@ -224,7 +224,7 @@
     "\n",
     "### Importing Functions Directly\n",
     "\n",
-    "In some cases you might need to use one specific function multiple times. But importing the whole module (like above) requires you to use the `<module name>.<function name>` syntax to access functions within that module. To make it simpler we can import one or more specific functions directly into our 'namespace'.\n",
+    "In some cases,  you might need to use one specific function multiple times. But importing the whole module (like above) requires you to use the `<module name>.<function name>` syntax to access functions within that module. To make it simpler we can import one or more specific functions directly into our 'namespace'.\n",
     "\n",
     "To do that you can use the `from <module name> import <function name>` syntax, e.g.:\n",
     "\n",
@@ -277,7 +277,7 @@
    "source": [
     "### Importing with Aliases\n",
     "\n",
-    "When we import libraries it is possible to shorten the library name to make coding easier. For instance, the module `datetime` ([details here](https://docs.python.org/3/library/datetime.html)) provides us with essential functionality for dealing with dates and time but its name is unnecessarily long.\n",
+    "When we import libraries, it is possible to shorten the library name to make coding easier. For instance, the module `datetime` ([details here](https://docs.python.org/3/library/datetime.html)) provides us with essential functionality for dealing with dates and time but its name is unnecessarily long.\n",
     "\n",
     "You can use the syntax `import <module name> as <module alias>` to make your own short name for an imported module."
    ]
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
