--- a/notebooks/10_numpy-and-scipy.ipynb
+++ b/notebooks/10_numpy-and-scipy.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "### Linear Regression\n",
     "\n",
-    "The SciPy module contains a lot of useful stats functions including t-tests and linear regressions. Due to time constraints we will only explain the linear regression function (which we've already used above)."
+    "The SciPy module contains a lot of useful stats functions including t-tests and linear regressions. Owing to time constraints, we will only explain the linear regression function (which we've already used above)."
    ]
   },
   {
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
