--- a/notebooks/11_pandas.ipynb
+++ b/notebooks/11_pandas.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "## pandas\n",
     "\n",
-    "pandas (`pandas`) is a large and well developed module focused on data analytics functions and datatypes in Python. As pandas is a large module and we will only introduce you to a couple of functions today."
+    "pandas (`pandas`) is a large and well developed module focused on data analytics functions and datatypes in Python. As pandas is a large module, we will only introduce you to a couple of functions today."
    ]
   },
   {
@@ -60,7 +60,7 @@
     "\n",
     "pandas is built on top of NumPy and many NumPy array methods can be applied to `DataFrames` and `Series`.\n",
     "\n",
-    "If you're used to the `R` programming language then `DataFrames` and `Series` may already be familiar to you; although Python has it's own special ways to deal with these.\n",
+    "If you're used to the `R` programming language then `DataFrames` and `Series` may already be familiar to you; although Python has its own special ways to deal with these.\n",
     "There are many benefits to using a `DataFrame` instead on a NumPy array and these include the ability for pandas to deal with missing values and the ability to use relational database operations between DataFrames."
    ]
   },
@@ -384,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
