--- a/notebooks/12_seaborn.ipynb
+++ b/notebooks/12_seaborn.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "The code below imports three library pandas, seaborn and Matplotlib ('matplotlib'), Matplotlib underpins seaborn and allow plots to be saved. \n",
     "\n",
-    "The iris data is loeaded into a dataframe called iris and the first 5 rows are displayed. \n",
+    "The iris data is loaded into a dataframe called iris and the first 5 rows are displayed. \n",
     "\n",
     "The last line sets the style of the plots seaborn produces. "
    ]
@@ -150,7 +150,7 @@
     "\n",
     "Scatter and line plots are all part of Seaborn's relational plot tools. But sometimes we have categorical data (such as species) and might want to use box plots to explore this data.\n",
     "\n",
-    "The melt function create a long dateframe (more rows with fewer columns) from a wide dateframe (fewer rows but more columns) \n",
+    "The melt function create a long dataframe (more rows with fewer columns) from a wide dataframe (fewer rows but more columns) \n",
     "\n",
     "The plot is saved as a png file called seaborn_boxplot.png\n"
    ]
@@ -186,7 +186,7 @@
    "source": [
     "## Frequency histogram\n",
     "\n",
-    "Frequency histogram bin the data and plot the frequency of each bin. Frequency histogram are useful for understanding how ranges of values occur, identifying patterns, creating quickly visual summary and using statistical distributions to describe data. \n",
+    "Frequency histograms bin the data and plot the frequency of each bin. Frequency histograms are useful for understanding how ranges of values occur, identifying patterns, creating quick visual summaries and using statistical distributions to describe data. \n",
     "\n",
     "The plot is saved as a png file called seaborn_boxplot.png\n"
    ]
@@ -208,7 +208,7 @@
    "source": [
     "## Frequency histogram by speices\n",
     "\n",
-    "As before, the plot can be made on a specie specfic bases. \n",
+    "As before, the plot can be made on a species specfic bases. \n",
     "\n",
     "The plot is saved as a png file called seaborn_frequency_histogram_by_speices.png\n",
     "\n"
@@ -252,7 +252,7 @@
    "source": [
     "## Scatter XY plot and Frequency histogram\n",
     "\n",
-    "Both scatter plot and Frequency histogram can be combined in joint plot\n",
+    "Both scatter plots and Frequency histograms can be combined into a joint plot\n",
     "\n",
     "\n",
     "The plot is saved as a png file called seaborn_joint_plot.png\n",
@@ -308,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
