--- a/notebooks/01_running-python.ipynb
+++ b/notebooks/01_running-python.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "## Python Files\n",
     "\n",
-    "Generally, Python files are plain text files that end with the `.py` extension and contain Python programming language commands. This let's the operating system know that the file is a Python language program and to interpret the text as Python commands. Such files can be edited with a text editor and run from the shell/command line or executed as programmes."
+    "Generally, Python files are plain text files that end with the `.py` extension and contain Python programming language commands. This lets the operating system know that the file is a Python language program and to interpret the text as Python commands. Such files can be edited with a text editor and run from the shell/command line or executed as programmes."
    ]
   },
   {
@@ -98,7 +98,7 @@
    "source": [
     "## Jupyter Lab\n",
     "\n",
-    "However, we will focus on using Jupyter Lab notebooks (`.ipynb` extension). Notebooks are a more user-friendly way or working with Python and enable you to combine text notes (like this 'cell'), your Python codes and the results of codes - all in one place.\n",
+    "However, we will focus on using Jupyter Lab notebooks (`.ipynb` extension). Notebooks are a more user-friendly way of working with Python and enable you to combine text notes (like this 'cell'), your Python codes and the results of codes - all in one place.\n",
     "\n",
     "In general, Jupyter Lab will probably satisfy most of your programming needs in the near future."
    ]
@@ -113,7 +113,7 @@
    "source": [
     "## Cells\n",
     "\n",
-    "In Jupyter each block is called a cell. The currently selected cell is highlighted by a blue bar to the left and, if the cell is being edited, a blue frame around the cell.\n",
+    "In Jupyter, each block is called a cell. The currently selected cell is highlighted by a blue bar to the left and, if the cell is being edited, a blue frame around the cell.\n",
     "\n",
     "You can move between cells using the arrow keys (up and down); however, you must exit edit mode before doing so. This can be done by hitting the <kbd>Esc</kbd> key."
    ]
@@ -128,7 +128,7 @@
    "source": [
     "### Markdown Cells\n",
     "\n",
-    "Markdown cells, like this cell, are a form of formatted text. If you double click this cell (or press <kbd>Enter</kbd> when the cell is highlighted) it will change from pretty, formatted text to Markdown text. To change back to formatted text <kbd>Shift + Enter</kbd> "
+    "Markdown cells, like this cell, are a form of formatted text. If you double click this cell (or press <kbd>Enter</kbd> when the cell is highlighted) it will change from pretty, formatted text to Markdown text. To change back to formatted text <kbd>Shift + Enter</kbd> or <kbd>Ctrl + Enter </kbd> ."
    ]
   },
   {
@@ -139,7 +139,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 1.1:</strong> Double click the cell below to see the following.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 1.1:</strong> Double click the cell below to see how to format text in a number of different ways.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/OGFurQ15a5s '>here</a> for a walkthrough.</div>"
    ]
@@ -152,15 +152,15 @@
     }
    },
    "source": [
-    "1. How numbered lists work\n",
-    "2. How bulleted lists work:\n",
-    "   * How **bold** text can be created\n",
-    "   * How to use *italics*\n",
-    "   * And how to show `code`\n",
+    "1. This is how to format lists; either in number format...\n",
+    "2. Or in a bulleted list:\n",
+    "   * You can make **bold** text \n",
+    "   * Or *italic* text\n",
+    "   * And even show `code`\n",
     "  \n",
     "Throughout this course we recommend you add your own Markdown cells to make additional notes that you may find useful in the future.\n",
     "\n",
-    "Remember to use <kbd>Shift + Enter</kbd> to return to formmated text"
+    "Remember to use <kbd>Shift + Enter</kbd> to return to formatted text"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "### Interface\n",
-    "While keyboard short cuts are provided, the same results can be achieved using the jupyter notebook interface. For example, the cell type “markdown” or “code” can be changed from the tool bar at the top of the notebook. \n"
+    "While keyboard short-cuts are provided, the same results can be achieved using the Jupyter notebook interface. For example, the cell type “markdown” or “code” can be changed from the tool bar at the top of the notebook. \n"
    ]
   },
   {
@@ -216,7 +216,7 @@
     "\n",
     "Code cells, like the one below, can be filled with a series of Python commands. When the cell is run (<kbd>Ctrl+Enter</kbd> or <kbd>Shift+Enter</kbd>) the output is printed below.\n",
     "\n",
-    "Note that a code cell has a pair of square brackets to the left of the cell. If the square brackets are empty (`[ ]`) then the cell has not been run; if the square brackets contain an asterisk (`[*]`) then the cell is running; and if the square brackets contain a number (e.g. `[5]`) then the cell has been run and was the, for example, fifth cell to be run. The running order of cells is important as Jupyter can only know about data and functions in cells that have already been run."
+    "Note that a code cell has a pair of square brackets to the left of the cell. If the square brackets are empty (`[ ]`) then the cell has not been run; if the square brackets contain an asterisk (`[*]`) then the cell is running; and if the square brackets contain a number (e.g. `[5]`) then the cell has been run and was the, for example, fifth cell to be run. The running order of cells is important, as Jupyter can only know about data and functions in cells that have already been run."
    ]
   },
   {
@@ -301,9 +301,12 @@
     "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 1.6:</strong> Close this notebook and shutdown the kernel.\n",
     "<br/>\n",
     "<br/>\n",
-    "By clicking File on the menu bar and then clicking Close and Shut Down Notebook\n",
+    "Do this by clicking \"File\" on the menu bar and then clicking \"Close and Shut Down Notebook\"\n",
+    "\n",
+    "You can also do this by pressing <kbd> Ctrl + Shift + Q </kbd>.\n",
     "    \n",
-    "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/Z4GGt3LyZ08'>here</a> for a walkthrough.</div>"
+    "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/Z4GGt3LyZ08'>here</a> for a walkthrough.</div>\n",
+    "\n"
    ]
   },
   {
@@ -316,13 +319,12 @@
    "source": [
     "### Help with Jupyter\n",
     "\n",
-    "Sometimes we all need help. Thankfully Jupyter Lab has a help menu that links to helpful documentations for:\n",
+    "Sometimes, we all need help. Thankfully Jupyter Lab has a help menu that links to helpful documentations for:\n",
     "\n",
     "* Keyboard Shortcuts in Jupyter\n",
-    "* Jupyter\n",
     "* Markdown\n",
     "* Python\n",
-    "* NumPy, SciPy, Matplotlib and pandas (all of which we'll get to later)"
+    "* NumPy, SciPy, Matplotlib and pandas (Python packages: all of which we'll get to later)"
    ]
   },
   {
@@ -350,9 +352,9 @@
    "source": [
     "<div style=\"border: 3px solid #7570b3; border-radius: 5px; padding: 10pt\"><strong>Challenge 1.7:</strong></br></br> Find documentation and examples of markdown cells in official Jupyter documentation at \n",
     "    <a href='https://jupyter-notebook.readthedocs.io'>https://jupyter-notebook.readthedocs.io</a>.\n",
-    "</br></br>You can see that markdown can be used for advanced formating, including tabular data and mathematical equations. Create a cell with a table containing mathematical expressions for your favourite three bits of maths. You can familiarise yourself with LaTeX for typsetting mathematical equations here <a href='https://www.authorea.com/users/77723/articles/110898-how-to-write-mathematical-equations-expressions-and-symbols-with-latex-a-cheatsheet'> here</a>.\n",
+    "</br></br>You can see that markdown can be used for advanced formating, including tabular data and mathematical equations. Create a cell with a table containing mathematical expressions for your favourite three bits of maths. You can familiarise yourself with LaTeX for typsetting mathematical equations <a href='https://www.authorea.com/users/77723/articles/110898-how-to-write-mathematical-equations-expressions-and-symbols-with-latex-a-cheatsheet'> here</a>.\n",
     "\n",
-    "</br></br>A pdf list Jupyter Notebook commands can be found <a href='https://www.edureka.co/blog/wp-content/uploads/2018/10/Jupyter_Notebook_CheatSheet_Edureka.pdf'>here </a>\n",
+    "</br></br>A pdf list of Jupyter Notebook commands can be found <a href='https://www.edureka.co/blog/wp-content/uploads/2018/10/Jupyter_Notebook_CheatSheet_Edureka.pdf'>here </a>.\n",
     "</div>"
    ]
   },
@@ -387,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
