--- a/notebooks/02_python-syntax.ipynb
+++ b/notebooks/02_python-syntax.ipynb
@@ -33,7 +33,7 @@
     "* Know what a variable is and how Python can perform operations on variables\n",
     "* Define your own variables\n",
     "* Understand that Python starts counting at zero\n",
-    "* Learn to use the `print()`, `len()` built-in functions\n",
+    "* Learn to use the `print()` and `len()` built-in functions\n",
     "* Learn how to format a string\n",
     "* Trace how a variable changes over several operations"
    ]
@@ -61,7 +61,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.1:</strong> Run the following cells (don't worry to much about the print statements) and note how everything after the <code>#</code> is ignored, on that line. Note how Jupyter Lab automatically prints the final line of each cell.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.1:</strong> Run the following cells (don't worry too much about the print statements) and note how everything after the <code>#</code> is ignored, on that line. Note how Jupyter Lab automatically prints the final line of each cell.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/9iB1ov8N2Q4'>here</a> for a walkthrough.\n",
     "</div>"
@@ -174,12 +174,12 @@
    "source": [
     "## Variables\n",
     "\n",
-    "**Variables** are ways of accessing data that we want to use multiple times or that we want to perform operations on. Variables are created with the `=` symbol - we call this 'assignment'. As their name suggests the values stored within a variable can change as the program runs. \n",
+    "**Variables** are ways of accessing data that we want to use multiple times or that we want to perform operations on. Variables are created with the `=` symbol - we call this 'assignment'. As their name suggests, the values stored within a variable can change as the program runs. \n",
     "\n",
     "Variable names can only contain letters, numbers and underscores and they cannot start with a number (nor should they start with an underscore). There are many conventions for naming variables but the key thing is: **make it understandable**.\n",
     "\n",
     "Strings (letters, words and sentences) must always be delimited by `'` or `\"`. We will encounter some other rules about strings as the course proceeds. \n",
-    "</br>e.g</br>\n",
+    "</br>Here is an example of how to create a variable named *species* and assign it the *string* value *pangolin*:</br>\n",
     "<code>species = \"pangolin\"</code>"
    ]
   },
@@ -191,7 +191,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.4:</strong> In the next cell, complete the Python with your own details and run the cell. By replace the ____ with the valid information \n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.4:</strong> In the next cell, complete the Python with your own details and run the cell. To do this, replace the ____ with your own valid ( or made-up !)  information .\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/2Eg07VFnOZw'>here</a> for a walkthrough.</div>"
    ]
@@ -248,7 +248,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #d95f02; border-radius: 5px; padding: 10pt\"><strong>Exercise 2.6:</strong> Create a new Python cell, in it define the variables: <code>hours_in_day</code> and <code>hours_asleep_per_day</code>, <code>days_in_year</code>. Calculate what fraction of a day is spent sleeping and what is the total number of days spent asleep in each year.\n",
+    "<div style=\"border: 3px solid #d95f02; border-radius: 5px; padding: 10pt\"><strong>Exercise 2.6:</strong> Create a new Python cell. In it, define the following variables: <code>hours_in_day</code>, <code>hours_asleep_per_day</code>, and <code>days_in_year</code> , using some rough estimated values. Calculate what fraction of a day is spent sleeping and what is the total number of days spent asleep in each year.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/A1YBvWY7z-U'>here</a> for a walkthrough.</div>"
    ]
@@ -263,11 +263,11 @@
    "source": [
     "### Indexing\n",
     "\n",
-    "Certain variables, such as those holding strings, can be 'indexed' - we can access individual elements (like letters in word).\n",
+    "Certain variables, such as those holding strings, can be 'indexed' - we can access individual elements (like each letter in a word).\n",
     "\n",
     "In Python we do this with square brackets, `[]`.\n",
     "\n",
-    "**Important:** But it's really important to remember that Python (like many other programming languages) starts indexing at `0`. The first element is at index position 0, not 1 as you my expect "
+    "**Important:** However, it's really important to remember that Python (like many other programming languages) starts indexing at `0`. The first element is at index position 0, not 1 as you may expect! "
    ]
   },
   {
@@ -278,7 +278,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.7:</strong> In the next cell index your <code>first_name</code> variable to get just the first vowel in your name.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.7:</strong> In the next cell, index your <code>first_name</code> variable to get just the first vowel in your name.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/7-LHjwRsJCo'>here</a> for a walkthrough.</div>"
    ]
@@ -427,18 +427,19 @@
     "\n",
     "Let's take some of this new syntax one step at a time.\n",
     "\n",
-    "`f` before a string (i.e. anything inside `\"` marks) tells Python that this string includes 'formatting' - i.e. that we want to include the value of some variables in our printed string.\n",
-    "Because we don't always know these values before printing them (e.g. if they're the result of a big computation) we want to just give Python the variable name and ask it to print that value.\n",
+    "`f` before a string (i.e. anything inside `\"`), tells Python that this string includes 'formatting' - i.e., that we want to include the value of some variables in our printed string.\n",
     "\n",
-    "In the example above we have a string `\"{first_name} {last_name} is {age} years old.\"` and by putting an `f` before it Python knows do a formatting operation on that string, replacing all the `{variables}` with their final values.\n",
+    "Because we don't always know these values before printing them (e.g. if they're the result of a big computation), we want to just give Python the variable name and ask it to print that value.\n",
+    "\n",
+    "In the example above we have a string `\"{first_name} {last_name} is {age} years old.\"`. By putting an `f` before it Python knows do a formatting operation on that string, replacing all `{variables}` with their final values.\n",
     "\n",
     "So how does Python know what to format and how?\n",
     "\n",
-    "In this example we haven't told Python 'how' to format anything - Python is very good at taking guesses with that - and we won't cover this until much later in the course.\n",
+    "In this example we haven't told Python *how* to format anything - although, Python is very good at taking guesses. We won't cover this until much later in the course.\n",
     "\n",
-    "But we have told Python 'what' to format - we passed variables inside the brackets: `first_name`, `last_name`, `age`.\n",
+    "But we have told Python *what* to format - we placed named variables inside the brackets: `first_name`, `last_name`, `age`.\n",
     "\n",
-    "So Python knows the things it needs to format, and guesses how it should format the."
+    "So, Python knows the things it needs to format, and guesses how it should format them."
    ]
   },
   {
@@ -449,7 +450,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.12:</strong> In the cell below, change the code to print only your first name name and report your shoe size instead of your age.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 2.12:</strong> In the cell below, change the code to print only your first name, and to report your shoe size instead of your age.\n",
     "<br/>\n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/TQmRlNgixl8'>here</a> for a walkthrough.\n",
     "</div>"
@@ -581,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
