--- a/notebooks/03_data-types.ipynb
+++ b/notebooks/03_data-types.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## Objectives\n",
     "\n",
-    "* Understand that variables can hold any information - but needs to know the 'type'\n",
+    "* Understand that variables can hold any information - but that Python needs to know the 'type' of information held\n",
     "* Know the most commonly used built-in Python data types\n",
     "* Explain the differences between `int` and `float` variables\n",
     "* Convert between data types"
@@ -49,14 +49,14 @@
     "\n",
     "For example, Python (and hopefully you) thinks that it's perfectly okay to multiply two numbers together but not two words!\n",
     "\n",
-    "Python has a large number of types but for now we will consider only three:\n",
+    "Python has a large number of data types but for now we will consider only three:\n",
     "\n",
     "* `int` or integers (whole numbers)\n",
     "* `float` or floats (numbers with decimal information)\n",
     "* `str` or character strings, i.e. text\n",
     "  * Note that strings are always delimited by `'` or `\"`\n",
     "\n",
-    "Python also has a built-in function that will tell you what type some data is."
+    "Python also has a built-in function, <code>type()</code> that will tell you what type some variables or data are."
    ]
   },
   {
@@ -103,8 +103,8 @@
    "source": [
     "<div style=\"border: 3px solid #d95f02; border-radius: 5px; padding: 10pt\"><strong>Exercise 3.2:</strong> What type of values might you use for the following:\n",
     "<ul>\n",
-    "    <li>Number of days till International Talk Like a Pirate Day?</li>\n",
-    "    <li>Time since the start of an experiment (what unit might you use?)?</li>\n",
+    "    <li>Number of days until International Talk Like a Pirate Day?</li>\n",
+    "    <li>Time since the start of an experiment (think also about what unit you might use)?</li>\n",
     "    <li>Unique identifier for an animal?</li>\n",
     "    <li>The name of a data file?</li>\n",
     "</ul>\n",
@@ -140,7 +140,7 @@
     "        <li>add a <code>str</code> with an <code>int</code></li>\n",
     "    </ol>\n",
     "\n",
-    "Note: Adding two strings, canonicates them, joining them together\n",
+    "Note: Adding two strings, concatenates them, joining them together\n",
     "    \n",
     "When you've done this, or if you get stuck, see the video <a href='https://youtu.be/_s6seW4vpuE'>here</a> for a walkthrough.</div>"
    ]
@@ -272,7 +272,7 @@
     }
    },
    "source": [
-    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 3.7:</strong> Run the following code cell. The variables are not shared between different notebooks so you need to initialise them again.\n",
+    "<div style=\"border: 3px solid #1b9e77; border-radius: 5px; padding: 10pt\"><strong>Task 3.7:</strong> Run the following code cell. The variables are not shared between different notebooks so you need to initialise them (assign them some initial values) again.\n",
     "<br/>\n",
     "<!--When you've done this, or if you get stuck, see the video <a href='https://youtu.be/HrL71GHOEa4'>here</a> for a walkthrough.--></div>"
    ]
@@ -528,7 +528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
