--- a/notebooks/07_python-conditionals.ipynb
+++ b/notebooks/07_python-conditionals.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "## Conditionals and `if` statements\n",
     "\n",
-    "In programming a 'conditional' gives code the ability to make a choice - usually a yes/no choice.\n",
+    "In programming, a 'conditional' gives code the ability to make a choice - usually a yes/no choice.\n",
     "\n",
     "The most common conditional is the `if` statement, which takes the following form:\n",
     "\n",
@@ -56,7 +56,7 @@
     "\n",
     "Like a `for` loop, there are two special features of `if` statements:\n",
     "\n",
-    "1. `if` statements must end in a colon, this signals the start of the code you want to run in that situation.\n",
+    "1. `if` statements must end in a colon. This signals the start of the code you want to run in that situation.\n",
     "2. The body of an `if` statement (called a branch) must be indented,. Thankfully, Jupyter should autoindent lines following a colon for you."
    ]
   },
@@ -70,7 +70,7 @@
    "source": [
     "### Boolean expressions\n",
     "\n",
-    "But what about our `<BooleanExpression>` (above).\n",
+    "But what about our `<BooleanExpression>` (above)?\n",
     "\n",
     "A Boolean expression is any expression that can be evaluated as true or false, e.g.\n",
     "\n",
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
