--- a/notebooks/08_python-functions.ipynb
+++ b/notebooks/08_python-functions.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Functions\n",
     "\n",
-    "Programs can easily become large and unweilding. Functions enable us to break programs down into smaller chunks, making our code easier to understand *and* easier to debug.\n",
+    "Programs can easily become large and unwieldy. Functions enable us to break programs down into smaller chunks, making our code easier to understand *and* easier to debug.\n",
     "\n",
     "A further benefit of functions is that they can be reused - it's the 'write once, use often' philosophy of coding.\n",
     "\n",
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   },
   "vscode": {
    "interpreter": {
